package app.entities;

public class PillarDTO extends MaterialDTO {

    public PillarDTO(int materialId, String name, Mtype type,int widthMm, int depthMm, String description){
        super(materialId, name, type, widthMm, depthMm, description);
    }
}
