package app.persistence;

public class PremadeMapper {
}
