@startuml
'https://plantuml.com/class-diagram

class main
package "MailSystem" #yellow {
interface IMAP
}
package "Config"{
    class ThymeleafConfig
}
package "Controller" #red {
    class PremadeController
    class CustomController
    class OrderController{
        + Boolean {static} createOrder(ConnectionPool, Context ctx)
    }
    package "admin" #pink {
    class AdminSite
    class BuildACarport
    }
}
package "Mapper" #green {
    class PremadeMapper
    class OrderMapper{
        + {static} OrderDTO addOrder(ConnectionPool, OrderDTO)
    }
    class MaterialMapper
}
package "Engine" #lightblue {
    class MainEngine
    interface Roof
    interface Pillars
    interface Beams
    interface Crossbeams
}
main *-- "Controller"
main *-- "Config"
PremadeController *-- PremadeMapper
CustomController *-- MaterialMapper
OrderController *-- OrderMapper
IMAP --* CustomController
IMAP --* BuildACarport
BuildACarport *-- MainEngine
BuildACarport *-- MaterialMapper
MainEngine *-- Roof
MainEngine *-- Pillars
MainEngine *-- Beams
MainEngine *-- Crossbeams
AdminSite *-- "Mapper"
MaterialMapper --* "Engine"


@enduml